[gd_scene load_steps=12 format=3 uid="uid://vduis8xqi7sg"]

[ext_resource type="Script" path="res://World/Enemies/Drone/EnemyDrone.gd" id="1_lf445"]
[ext_resource type="Texture2D" uid="uid://dn3oefyvoub6q" path="res://World/Enemies/Drone/drone_flying.png" id="1_yhu1e"]
[ext_resource type="Texture2D" uid="uid://pmofgkdhd6u2" path="res://World/Enemies/Drone/drone_preview.png" id="2_2uktl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0ni60"]
atlas = ExtResource("1_yhu1e")
region = Rect2(0, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_g462r"]
atlas = ExtResource("1_yhu1e")
region = Rect2(54, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_072iw"]
atlas = ExtResource("2_2uktl")
region = Rect2(110, 0, 55, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn5kr"]
atlas = ExtResource("2_2uktl")
region = Rect2(165, 0, 55, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_mxubc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ni60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g462r")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_072iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn5kr")
}],
"loop": true,
"name": &"turn",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ydow"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e2ygd"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_grk8g"]
radius = 75.5381

[node name="DroneCharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_lf445")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mxubc")
animation = &"fly"
frame = 1
frame_progress = 0.764832

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 3)
shape = SubResource("CircleShape2D_5ydow")

[node name="HurtBoxArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBoxArea2D"]
position = Vector2(3, 2)
shape = SubResource("CircleShape2D_e2ygd")

[node name="WaitTimer" type="Timer" parent="."]

[node name="AttackArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
shape = SubResource("CircleShape2D_grk8g")
debug_color = Color(0.963201, 0.02718, 0.484247, 0.42)

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="area_entered" from="HurtBoxArea2D" to="." method="_on_hurt_box_area_2d_area_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="AttackArea2D" to="." method="_on_attack_area_2d_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
